--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
           <div class="form-group">
             <label for="tecnico">Técnico que intervino:</label>
             <select name="tecnico" id="tecnico" required>
-              <option value="Dario H. Guaraz">Dario H. Guaraz</option>
-              <option value="Jorge Cayo">Jorge Cayo</option>
-              <option value="Julian Diodati">Julian Diodati</option>
-              <option value="Adriano Di Leo Lira">Adriano Di Leo Lira</option>
-              <option value="Daiana Diaz">Daiana Diaz</option>
-              <option value="Jorge Almandoz">Jorge Almandoz</option>
+              <option value="tecnico 1">nombre de tecnico 1</option>
+              <option value="tecnico 2">nombre de tecnico 2</option>
+              <option value="tecnico 3">nombre de tecnico 3</option>
+              <option value="tecnico 4">nombre de tecnico 4</option>
+              <option value="tecnico 5">nombre de tecnico 5</option>
+              <option value="tecnico 6">nombre de tecnico 6</option>
             </select>
           </div>
           <hr />
